# lurpax

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  homebrew-tap.yml  release.yml  tag-release-on-main.yml
docs/: AUDIT_GUIDE.md  DESIGN.md  FORMAT.md
docs/yubikey-demo/sample/: hello.txt
example/: corrupt.py  corrupt_shards.py  e2e_corruption_test.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_header.rs  fuzz_payload.rs
packaging/homebrew/: lurpax.rb  update-formula.sh
scripts/: coverage.sh  install-git-hooks.sh  print-release-sha256s.sh  push_homebrew_tap.sh  update_homebrew_formula.py
src/: cli.rs  constants.rs  lib.rs  main.rs
src/archive/: mod.rs  tar.rs
src/crypto/: encryption.rs  kdf.rs  mod.rs  stream.rs  yubi_challenge_wrap.rs
src/errors/: mod.rs
src/hardware/: mod.rs  yubikey.rs
src/recovery/: checksum.rs  fec.rs  mod.rs
src/vault/: container.rs  header.rs  mod.rs  service.rs
tests/: archive_security.rs  chunked_encryption.rs  cli_verify.rs  container_format.rs  corruption_recovery.rs  e2e_vault.rs  header_serialization.rs  kdf_vectors.rs  rs_group.rs  vault_failures.rs  vault_roundtrip.rs
