[package]
name = "lurpax-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lurpax = { path = ".." }

[[bin]]
name = "fuzz_header"
path = "fuzz_targets/fuzz_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_payload"
path = "fuzz_targets/fuzz_payload.rs"
test = false
doc = false
bench = false

[workspace]
